# twilight-commander

./: .gitignore  .tc-debug.toml  .tcide.swp  .twilight-commander-rc.toml  Cargo.toml  LICENSE  README.md  deploy.sh  install.sh  rustfmt.toml  tcide  tcide-debug  tcide_neovim  tcide_vim  twilight-commander-vim.toml  twilight-commander.toml
dev/: cover.sh  deploy.sh  install.sh  lint.sh  test.sh
src/: config.rs  controller.rs  event_queue.rs  main.rs  model.rs  pager.rs  path_tree.rs  utils.rs  view.rs
src/config/: args_parser.rs  behavior.rs  color.rs  composition.rs  debug.rs
src/controller/: key_event_handler.rs  key_event_matcher.rs  resize_event_handler.rs
src/controller/key_event_matcher/: collapse_dir.rs  entry_down.rs  entry_up.rs  expand_dir.rs  file_action.rs  quit.rs  reload.rs  skip_down.rs  skip_up.rs
src/event_queue/: event.rs  key_event_handler.rs  resize_event_handler.rs
src/model/: compare_functions.rs  config.rs  event.rs  path_node.rs  tree.rs  tree_index.rs
src/model/config/: behavior.rs  color.rs  composition.rs  debug.rs  keybinding.rs  setup.rs
src/model/path_node/: debug.rs
src/model/tree/: iterators.rs  node.rs
src/pager/: print.rs  scroll.rs  update.rs  util.rs
src/path_tree/: path_node.rs  tree_index.rs
src/view/: compose.rs  composer.rs  print.rs  scroll.rs  update.rs
